force-app/main/default/objects/Project_Territory__c/Project_Territory__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant (GRACE sends Territories)
2. CORE / ZR
3.</description>
    <label>Projekt Vertriebsgebiet</label>
    <nameField>
        <displayFormat>PT-{000000}</displayFormat>
        <label>Project Territory Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projekt Vertriebsgebiete</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>