force-app/main/default/objects/Project_Territory__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZR
3.</description>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Project_Territories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>