force-app/main/default/objects/Project_Territory__c/fields/Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Territory_ID__c</fullName>
    <description>1. Integration relevant (GRACE)
2. ZR
3. Stores the Territory ID from GRACE (e.g. M101)</description>
    <label>Territory ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>