force-app/main/default/objects/Project_Territory__c/fields/Territory_Name__c.field-meta.xml
<CustomField>
    <fullName>Territory_Name__c</fullName>
    <description>1. Not integration relevant
2. ZR
3. Filled by Flow</description>
    <label>Territory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>